<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_mode">

    <Button
        android:id="@+id/guess1"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="126dp"
        android:text="@string/guess1"
        app:layout_constraintEnd_toStartOf="@+id/guess2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/guess2"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="126dp"
        android:text="@string/guess2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guess1"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/guess3"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="172dp"
        android:text="@string/guess3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guess4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1" />

    <Button
        android:id="@+id/guess4"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="172dp"
        android:text="@string/guess4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guess3"
        app:layout_constraintTop_toBottomOf="@+id/guess2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="306dp"
        android:layout_height="146dp"
        android:layout_marginTop="108dp"
        android:background="@color/black"
        android:backgroundTint="@color/purple_500"
        android:text="@string/guess"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>